--- a/buynsell.html
+++ b/buynsell.html
@@ -54,10 +54,27 @@
 
 <!-- teleport section -->
 <div class="containerteleport">
+  <h3> Send your parcel </h3>
   <h4><form>Enter recipient account number:
   <input type="search" name="search">
 </form></h4>
+<button type="button" onclick="alert('Sending now')">Send</button>
+<h5> Item is ready to be sent </h5>
+<p>
+  
+
+</p>
+<p></p>
+
+<p></p>
+<h3> Receive parcel(s)</h3>
+<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
+<button type="button" onclick="alert('Receiving now')">Receive</button>
+
+
+
 </div>
+
 <!--teleport section ends -->
 
 
@@ -92,7 +109,7 @@
           <!-- gallery Section -->
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 1
+               <img src="img/guitar.jpg" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
@@ -120,7 +137,7 @@
                 GALLERY 2
               </div>
             </div>
-            <div class="col-sm-6 col-md-3 col-lg-4">
+         <!--    <div class="col-sm-6 col-md-3 col-lg-4">
               <div class="galleryIMG border">
                 GALLERY 3
               </div>
@@ -128,7 +145,7 @@
             <div class="col-sm-6 col-md-3 col-lg-4">
               <div class="galleryIMG border">
                 GALLERY 4
-              </div>
+              </div> -->
             </div>
            
    
