--- a/postbox.html
+++ b/postbox.html
@@ -51,23 +51,124 @@
           	</header>
         </div>
       </div>
+
+
+<!-- teleport section -->
+<div class="containerteleport">
+  <h3> Send your parcel </h3>
+  <h4><form>Enter recipient account number:
+  <input type="search" name="search">
+</form></h4>
+<button type="button" onclick="alert('Sending now')">Send</button>
+<h5> Item is ready to be sent </h5>
+<p>
+  
+
+</p>
+<p></p>
+
+<p></p>
+<h3> Receive parcel(s)</h3>
+<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
+<button type="button" onclick="alert('Receiving now')">Receive</button>
+
+
+
+</div>
+
+<!--teleport section ends -->
+
+
+
+
+
+
+
+
       <div class="container bodyWrapper">
-         <div class="row">
+       <!--   <div class="row">
           <div class="jumbotron">
             <h1>Hello, world!</h1>
             <p>...</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
           </div>
-         </div>
+         </div> -->
          <div class="row galleryBody">
-          <h2 style="padding-left:15px;">GALLERY SECTION</h2>
+          <h2 style="padding-left:40px;">Postbox</h2>
+
+
+		          <h4 style="padding-left:40px;"><form>Search user:
+  <input type="search" name="search">
+</form>
+<button type="button" onclick="alert('Sending now')">Search</button>
+</h4>
+
+
+
+
           <!-- gallery Section -->
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <div class="listofconversations">
+
+                GALLERY 1
+              </div>
+<div class="listofconversations">
+                GALLERY 2
+              </div>
+
+              <div class="listofconversations">
+                GALLERY 2
+              </div>
+
+
+            </div>
+              <div class="col-sm-6 col-md-6 col-lg-6">
+                          </div>
+          
+
+
+               <!-- convo box  section -->
+<div class="col-sm-6 col-md-6 col-lg-6"> 
+<div class="row containerconvobox">
+  <h3> Send your parcel </h3>
+  <h4><form>Enter recipient account number:
+  <input type="search" name="search">
+</form></h4>
+<button type="button" onclick="alert('Sending now')">Send</button>
+<h5> Item is ready to be sent </h5>
+<p>
+  
+
+</p>
+<p></p>
+
+<p></p>
+<h3> Receive parcel(s)</h3>
+<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
+<button type="button" onclick="alert('Receiving now')">Receive</button>
+
+
+
+</div>
+
+<!--convo box section ends -->
+        <!--     <div class="col-sm-6 col-md-3 col-lg-2">
+              <div class="galleryIMG border">
+                GALLERY 4
+              </div>
+            </div>
             <div class="col-sm-6 col-md-3 col-lg-2">
               <div class="galleryIMG border">
                 GALLERY 1
               </div>
-            </div>
-            <div class="col-sm-6 col-md-3 col-lg-2">
+            </div> -->
+
+
+
+ 
+
+
+         <!--    <div class="col-sm-6 col-md-3 col-lg-2">
               <div class="galleryIMG border">
                 GALLERY 2
               </div>
@@ -81,32 +182,12 @@
               <div class="galleryIMG border">
                 GALLERY 4
               </div>
-            </div>
-            <div class="col-sm-6 col-md-3 col-lg-2">
-              <div class="galleryIMG border">
-                GALLERY 1
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-3 col-lg-2">
-              <div class="galleryIMG border">
-                GALLERY 2
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-3 col-lg-2">
-              <div class="galleryIMG border">
-                GALLERY 3
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-3 col-lg-2">
-              <div class="galleryIMG border">
-                GALLERY 4
-              </div>
-            </div>
+            </div> -->
           <!-- gallery Section -->
          </div>
       </div>
       <!-- footer section -->
-      <div class="row">
+     <!--  <div class="row">
         <div class="container-fluid footerbg">
           <div class="container">
             <footer>
@@ -114,9 +195,15 @@
             </footer>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- footer Section -->
     </div>
+
+
+
+
+
+
     
 
 
