--- a/postbox.html
+++ b/postbox.html
@@ -40,9 +40,9 @@
 	            </div>
 	              <!-- menubar Small Res -->
 	              <div class="col-xs-12 col-sm-6 hidden-md hidden-lg border">
-	                <div class="row menuSm"><a href="#">Donate</a></div>
-	                <div class="row menuSm"><a href="#">Postbox</a></div>
-	                <div class="row menuSm"><a href="#">Buy & Sell</a></div>
+	                <div class="row menuSm"><a href="Donate.html">Donate</a></div>
+	                <div class="row menuSm"><a href="Postbox.html">Postbox</a></div>
+	                <div class="row menuSm"><a href="Buynsell.html">Buy & Sell</a></div>
                   <div><img src="img/usericon.jpg" class="usericon"></div>
 	                <div class="row menuSm">Tammy</div>
 	                
@@ -100,7 +100,7 @@
 		          <h4 style="padding-left:40px;"><form>Search user:
   <input type="search" name="search">
 </form>
-<button type="button" onclick="alert('Sending now')">Search</button>
+<button type="button" onclick="alert('Searching now')">Search</button>
 </h4>
 
 
@@ -108,18 +108,23 @@
 
           <!-- gallery Section -->
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <div class="listofconversations">
+              <a href="postbox.html"><div class="listofconversations">
 
-                GALLERY 1
-              </div>
-<div class="listofconversations">
+                <h4>
+                <img src="img/katie.jpg" class="katie" background-color: grey>Katie Kuo</h4>
+                <h5> Katie has one item pending</h5>
+
+              </div></a>
+<a href="postbox2.html"><div class="listofconversations">
+              <h4>
+                <img src="img/kaia.jpg" class="katie" background-color: grey>Kaia Kento</h4>
+                <h5> Kaia: Heya!</h5>
+              </div></a>
+
+             <!--  <div class="listofconversations">
                 GALLERY 2
               </div>
-
-              <div class="listofconversations">
-                GALLERY 2
-              </div>
-
+ -->
 
             </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
@@ -130,22 +135,21 @@
                <!-- convo box  section -->
 <div class="col-sm-6 col-md-6 col-lg-6"> 
 <div class="row containerconvobox">
-  <h3> Send your parcel </h3>
-  <h4><form>Enter recipient account number:
+<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
+  
+<div class="convoboxcontent">
+<h5> Katie has sent you an item. </h5>
+<h5> Katie: Did you get it? </h5>
+<h5> You: Yup cheers :) </h5>
+<h5> Katie has one item pending </h5>
+
+  <h4><form>Enter message:
   <input type="search" name="search">
 </form></h4>
-<button type="button" onclick="alert('Sending now')">Send</button>
-<h5> Item is ready to be sent </h5>
-<p>
-  
 
-</p>
-<p></p>
+</div> <!--convoboxcontent-->
 
-<p></p>
-<h3> Receive parcel(s)</h3>
-<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
-<button type="button" onclick="alert('Receiving now')">Receive</button>
+<button type="button" name="message" >Send</button>
 
 
 
