--- a/buynsell.html
+++ b/buynsell.html
@@ -40,9 +40,9 @@
 	            </div>
 	              <!-- menubar Small Res -->
 	              <div class="col-xs-12 col-sm-6 hidden-md hidden-lg border">
-	                <div class="row menuSm"><a href="#">Donate</a></div>
-	                <div class="row menuSm"><a href="#">Postbox</a></div>
-	                <div class="row menuSm"><a href="#">Buy & Sell</a></div>
+	                   <div class="row menuSm"><a href="Donate.html">Donate</a></div>
+                  <div class="row menuSm"><a href="Postbox.html">Postbox</a></div>
+                  <div class="row menuSm"><a href="Buynsell.html">Buy & Sell</a></div>
                   <div><img src="img/usericon.jpg" class="usericon"></div>
 	                <div class="row menuSm">Tammy</div>
 	                
@@ -114,27 +114,27 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 2
+                <img src="img/camera.jpg" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 3
+                <img src="img/jacket.png" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 4
+                <img src="img/earrings.jpg" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 1
+                <img src="img/togs.jpg" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-3 col-lg-4">
               <div class="galleryIMG border">
-                GALLERY 2
+                <img src="img/bonsai.jpg" class="galleryIMG">
               </div>
             </div>
          <!--    <div class="col-sm-6 col-md-3 col-lg-4">
