--- a/buynsell.html
+++ b/buynsell.html
@@ -55,9 +55,9 @@
 <!-- teleport section -->
 <div class="containerteleport">
   <h3> Send your parcel </h3>
-  <h4><form>Enter recipient account number:
+  <h5><form>Enter recipient account number:
   <input type="search" name="search">
-</form></h4>
+</form></h5>
 <button type="button" onclick="alert('Sending now')">Send</button>
 <h5> Item is ready to be sent </h5>
 <p>
@@ -68,10 +68,10 @@
 
 <p></p>
 <h3> Receive parcel(s)</h3>
-<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
-<button type="button" onclick="alert('Receiving now')">Receive</button>
+<!-- <h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
+<button type="button" onclick="alert('Receiving now')">Receive</button> -->
 
-
+<h5> No current items to be received </h5>
 
 </div>
 
