--- a/buynsell.html
+++ b/buynsell.html
@@ -40,9 +40,9 @@
 	            </div>
 	              <!-- menubar Small Res -->
 	              <div class="col-xs-12 col-sm-6 hidden-md hidden-lg border">
-	                <div class="row menuSm"><a href="#">Donate</a></div>
-	                <div class="row menuSm"><a href="#">Postbox</a></div>
-	                <div class="row menuSm"><a href="#">Buy & Sell</a></div>
+	                   <div class="row menuSm"><a href="Donate.html">Donate</a></div>
+                  <div class="row menuSm"><a href="Postbox.html">Postbox</a></div>
+                  <div class="row menuSm"><a href="Buynsell.html">Buy & Sell</a></div>
                   <div><img src="img/usericon.jpg" class="usericon"></div>
 	                <div class="row menuSm">Tammy</div>
 	                
@@ -55,9 +55,9 @@
 <!-- teleport section -->
 <div class="containerteleport">
   <h3> Send your parcel </h3>
-  <h4><form>Enter recipient account number:
+  <h5><form>Enter recipient account number:
   <input type="search" name="search">
-</form></h4>
+</form></h5>
 <button type="button" onclick="alert('Sending now')">Send</button>
 <h5> Item is ready to be sent </h5>
 <p>
@@ -68,10 +68,10 @@
 
 <p></p>
 <h3> Receive parcel(s)</h3>
-<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
-<button type="button" onclick="alert('Receiving now')">Receive</button>
+<!-- <h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
+<button type="button" onclick="alert('Receiving now')">Receive</button> -->
 
-
+<h5> No current items to be received </h5>
 
 </div>
 
@@ -114,27 +114,27 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 2
+                <img src="img/camera.jpg" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 3
+                <img src="img/jacket.png" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 4
+                <img src="img/earrings.jpg" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="galleryIMG border">
-                GALLERY 1
+                <img src="img/togs.jpg" class="galleryIMG">
               </div>
             </div>
             <div class="col-sm-6 col-md-3 col-lg-4">
               <div class="galleryIMG border">
-                GALLERY 2
+                <img src="img/bonsai.jpg" class="galleryIMG">
               </div>
             </div>
          <!--    <div class="col-sm-6 col-md-3 col-lg-4">
