--- a/postbox2.html
+++ b/postbox2.html
@@ -56,7 +56,7 @@
 <!-- teleport section -->
 <div class="containerteleport">
   <h3> Send your parcel </h3>
-  <h3></h3>><form>Enter recipient account number:
+  <h3></h3><form>Enter recipient account number:
   <input type="search" name="search">
 </form></h3>
 <button type="button" onclick="alert('Sending now')">Send</button>
