--- a/index.html
+++ b/index.html
@@ -104,12 +104,17 @@ html {
 					<div class="row">
 						<!-- twitter send begins-->
                     <div class="col-md-6" "widget">
-                  <a class="twitter-timeline" href="https://twitter.com/tkuo6" data-widget-id="657112237178355712">Tweets by @tkuo6</a>
+              <!--     <a class="twitter-timeline" href="https://twitter.com/tkuo6" data-widget-id="657112237178355712">Tweets by @tkuo6</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>  
-
-					</div>
+ -->
+<!-- <a class="twitter-timeline" href="https://twitter.com/hashtag/Teleparcel" data-widget-id="657379203218714624">#Teleparcel Tweets</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+ -->					</div>
 					<div class="row">
 						<!-- twitter feed begins-->
+
+
+
 
 					</div>
 				</div>
@@ -130,9 +135,12 @@ html {
 <!-- 
         <div class="background">
  -->
-<!-- 
+
         
-             <img src="img/ocean.jpg" class="background">
+<!--              <img src="img/ocean.jpg" class="background"> -->
+</br>
+
+</br>
 <h1> Teleportation<br />
 technology<br />
  Revolutionising<br />
@@ -140,10 +148,15 @@ technology<br />
  <h4> With the magic of cutting edge technology, you can now <br />
  Send and receive parcels instantaneously with friends and family<br />
  Make online transactions with zero delivery wait time <br />
- Send donations to people living in poverty today
+ Send donations to people living in poverty today<br/>
+ </br>
+
+  Use #TeleparcelSend in your Twitter posts to send <br />
+ and #TeleparcelAccept to receive postage<br />
+ Find and make listings with #TeleparcelSelling <br />
+ And send donations with #TeleparcelAmnesty</h4>
     </div>
    </div>
->>>>>>> origin/master -->
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
