--- a/postbox.html
+++ b/postbox.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap wireframe</title>
+    <title>Teleparcel</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,24 +33,9 @@
                     <li class="hidden-sm hidden-xs col-md-1 menuLinks border"><a href="Postbox.html">Postbox</a></li>
                     <li class="hidden-sm hidden-xs col-md-1 menuLinks border"><a href="Buynsell.html">Buy & Sell</a></li>
                     <li class="userSection hidden-sm hidden-xs col-md-3 menuLinks border">
-                      <img src="img/usericon.jpg" class="usericon">
+                      <img src="img/usericon.png" class="usericon">
                       <h2>Tammy</h2>
                     </li>
-<<<<<<< HEAD
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-	                </ul>
-	            </div>
-	              <!-- menubar Small Res -->
-	              <div class="col-xs-12 col-sm-6 hidden-md hidden-lg border">
-	                <div class="row menuSm"><a href="Donate.html">Donate</a></div>
-	                <div class="row menuSm"><a href="Postbox.html">Postbox</a></div>
-	                <div class="row menuSm"><a href="Buynsell.html">Buy & Sell</a></div>
-=======
-=======
->>>>>>> Stashed changes
->>>>>>> origin/master
                   </ul>
               </div>
                 <!-- menubar Small Res -->
@@ -58,14 +43,7 @@
                   <div class="row menuSm"><a href="Donate.html">Donate</a></div>
                   <div class="row menuSm"><a href="Postbox.html">Postbox</a></div>
                   <div class="row menuSm"><a href="Buynsell.html">Buy & Sell</a></div>
-<<<<<<< HEAD
-=======
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
->>>>>>> origin/master
-                  <div><img src="img/usericon.jpg" class="usericon"></div>
+                  <div><img src="img/usericon.png" class="usericon"></div>
                   <div class="row menuSm">Tammy</div>
                   
                 </div>
@@ -73,33 +51,47 @@
             </header>
         </div>
       </div>
+<script>
+  (function() {
+    var cx = '010435349609505980954:d4lxuo3fvqy';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 
 
 <!-- teleport section -->
 <div class="containerteleport">
-  <h3> Send your parcel </h3>
-  </h3><form>Enter recipient account number:
+  <h3> Your stream </h3>
+
+<!--   </h3><form>Enter recipient account number:
   <input type="search" name="search">
 </form></h3>
 <button type="button" onclick="alert('Sending now')">Send</button>
-<h5> Item is ready to be sent </h5>
+<h5> Item is ready to be sent </h5> -->
 <p>
-  
+  <a class="twitter-timeline" href="https://twitter.com/search?q=tkuo6%20AND%20%23TeleparcelSend%20OR%20%23TeleparcelAccept%20-%23TeleparcelAmnesty%20-%23TeleparcelSelling" data-widget-id="657402219461906432">Tweets about tkuo6 AND #TeleparcelSend OR #TeleparcelAccept -#TeleparcelAmnesty -#TeleparcelSelling</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </p>
 <p></p>
 
-<p></p>
+<!-- <p></p>
 <h3> Receive parcel(s)</h3>
 <h3><img src="img/katie.jpg" class="katie">Katie Kuo</h3>
-<button type="button" onclick="alert('Receiving now')">Receive</button>
+<button type="button" onclick="alert('Receiving now')">Receive</button> -->
 
 
 
 </div>
 
 <!--teleport section ends -->
-
 
 
 
@@ -117,25 +109,13 @@
          </div> -->
          <div class="row galleryBody">
           <h2 style="padding-left:40px;">Postbox</h2>
+  <h3 style="padding-left:15px;">Conversations</h3>
 
-
-              <h3 style="padding-left:40px;"><form>Search user:
+<!--               <h3 style="padding-left:40px;"><form>Search user:
   <input type="search" name="search">
 </form>
 <button type="button" onclick="alert('Searching now')">Search</button>
-<<<<<<< HEAD
-</h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-</h4>
-=======
-</h3>
->>>>>>> Stashed changes
-=======
-</h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
+</h3> -->
 
 
 
@@ -144,43 +124,17 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
               <a href="postbox.html"><div class="listofconversations">
 
-<<<<<<< HEAD
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-                <h4>
-                <img src="img/katie.jpg" class="katie" background-color: grey>Katie Kuo</h4>
-                <h5> Katie has one item pending</h5>
-
-              </div></a>
-<a href="postbox2.html"><div class="listofconversations">
-              <h4>
-                <img src="img/kaia.jpg" class="katie" background-color: grey>Kaia Kento</h4>
-                <h5> Kaia: Heya!</h5>
-              </div></a>
-
-=======
-=======
->>>>>>> Stashed changes
->>>>>>> origin/master
                 <h3>
                 <img src="img/katie.jpg" class="katie" background-color: grey>Katie Kuo</h3>
-                <h5> Katie has one item pending</h5>
+                <h5> You've received an item from Katie</h5>
 
               </div></a>
 <a href="postbox2.html"><div class="listofconversations">
               <h3>
-                <img src="img/kaia.jpg" class="katie" background-color: grey>Kaia Kento</h3>
-                <h5> Kaia: Heya!</h5>
+                <img src="img/mikaela.jpeg" class="katie" background-color: grey>Mikaela Young</h3>
+                    <h5> You've sent Mikaela an item</h5>
               </div></a>
 
-<<<<<<< HEAD
-=======
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
->>>>>>> origin/master
              <!--  <div class="listofconversations">
                 GALLERY 2
               </div>
@@ -195,26 +149,16 @@
                <!-- convo box  section -->
 <div class="col-sm-6 col-md-6 col-lg-6"> 
 <div class="row containerconvobox">
-<<<<<<< HEAD
 <h3><img src="img/katie.jpg" class="katie">Katie Kuo</h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
-=======
-<h3><img src="img/katie.jpg" class="katie">Katie Kuo</h3>
->>>>>>> Stashed changes
-=======
-<h3><img src="img/katie.jpg" class="katie">Katie Kuo</h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
+<a class="twitter-timeline" href="https://twitter.com/search?q=tkuo6%20AND%20katie6441" data-widget-id="657430089706008576">Tweets about tkuo6 AND katie6441</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
   
-<div class="convoboxcontent">
+<!-- <div class="convoboxcontent">
 <h5> Katie has sent you an item. </h5>
 <h5> Katie: Did you get it? </h5>
 <h5> You: Yup cheers :) </h5>
 <h5> Katie has one item pending </h5>
-<<<<<<< HEAD
 
   <h3><form>Enter message:
   <input type="search" name="search">
@@ -222,39 +166,7 @@
 
 </div> <!--convoboxcontent-->
 
-<button type="button" >Send</button>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-
-  <h4><form>Enter message:
-  <input type="search" name="search">
-</form></h4>
-
-</div> <!--convoboxcontent-->
-
-<button type="button" name="message" >Send</button>
-=======
-
-  <h3><form>Enter message:
-  <input type="search" name="search">
-</form></h3>
-
-</div> <!--convoboxcontent-->
-
-<button type="button" >Send</button>
->>>>>>> Stashed changes
-=======
-
-  <h3><form>Enter message:
-  <input type="search" name="search">
-</form></h3>
-
-</div> <!--convoboxcontent-->
-
-<button type="button" >Send</button>
->>>>>>> Stashed changes
->>>>>>> origin/master
+<!-- <button type="button" >Send</button> -->
 
 
 
