--- a/postbox2.html
+++ b/postbox2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap wireframe</title>
+    <title>Teleparcel</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,9 +22,9 @@
     <div class="container-fluid mainWrapper">
       <div class="row headerBar">
         <div class="header noPadding">
-          	<header>
-	            <div class="col-sm-6 col-md-3 border header noPadding">
-	             <a href="index.html"><img src="img/logo.png" class="img-responsive logoImg"></a>
+            <header>
+              <div class="col-sm-6 col-md-3 border header noPadding">
+               <a href="index.html"><img src="img/logo.png" class="img-responsive logoImg"></a>
             </div>
             <!-- menuBar -->
             <div class="col-md-9 border noPadding hidden-sm hidden-xs">
@@ -32,75 +32,60 @@
                     <li class="hidden-sm hidden-xs col-md-1 menuLinks border"><a href="Donate.html">Donate</a></li>
                     <li class="hidden-sm hidden-xs col-md-1 menuLinks border"><a href="Postbox.html">Postbox</a></li>
                     <li class="hidden-sm hidden-xs col-md-1 menuLinks border"><a href="Buynsell.html">Buy & Sell</a></li>
-	                  <li class="userSection hidden-sm hidden-xs col-md-3 menuLinks border">
-                      <img src="img/usericon.jpg" class="usericon">
+                    <li class="userSection hidden-sm hidden-xs col-md-3 menuLinks border">
+                      <img src="img/usericon.png" class="usericon">
                       <h2>Tammy</h2>
                     </li>
-	                </ul>
-	            </div>
-	              <!-- menubar Small Res -->
-	              <div class="col-xs-12 col-sm-6 hidden-md hidden-lg border">
-	                <div class="row menuSm"><a href="Donate.html">Donate</a></div>
-	                <div class="row menuSm"><a href="Postbox.html">Postbox</a></div>
-	                <div class="row menuSm"><a href="Buynsell.html">Buy & Sell</a></div>
+                  </ul>
+              </div>
+                <!-- menubar Small Res -->
+                <div class="col-xs-12 col-sm-6 hidden-md hidden-lg border">
+                  <div class="row menuSm"><a href="Donate.html">Donate</a></div>
+                  <div class="row menuSm"><a href="Postbox.html">Postbox</a></div>
+                  <div class="row menuSm"><a href="Buynsell.html">Buy & Sell</a></div>
                   <div><img src="img/usericon.jpg" class="usericon"></div>
-	                <div class="row menuSm">Tammy</div>
-	                
-	              </div>
-	            <!-- menuBar ends -->
-          	</header>
+                  <div class="row menuSm">Tammy</div>
+                  
+                </div>
+              <!-- menuBar ends -->
+            </header>
         </div>
-      </div>
 
+      </div>
+        <script>
+  (function() {
+    var cx = '010435349609505980954:d4lxuo3fvqy';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 
 <!-- teleport section -->
 <div class="containerteleport">
-  <h3> Send your parcel </h3>
-<<<<<<< HEAD
-  <h3></h3><form>Enter recipient account number:
-  <input type="search" name="search">
-</form></h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-  <h4><form>Enter recipient account number:
-  <input type="search" name="search">
-</form></h4>
-=======
-  <h3></h3>><form>Enter recipient account number:
-  <input type="search" name="search">
-</form></h3>
->>>>>>> Stashed changes
-=======
-  <h3></h3>><form>Enter recipient account number:
-  <input type="search" name="search">
-</form></h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
-<button type="button" onclick="alert('Sending now')">Send</button>
-<h5> Item is ready to be sent </h5>
-<p>
+  <h3> Your stream </h3>
   
+<!--   </h3><form>Enter recipient account number:
+  <input type="search" name="search">
+</form></h3>
+<button type="button" onclick="alert('Sending now')">Send</button>
+<h5> Item is ready to be sent </h5> -->
+<p>
+  <a class="twitter-timeline" href="https://twitter.com/search?q=tkuo6%20AND%20%23TeleparcelSend%20OR%20%23TeleparcelAccept%20-%23TeleparcelAmnesty%20-%23TeleparcelSelling" data-widget-id="657402219461906432">Tweets about tkuo6 AND #TeleparcelSend OR #TeleparcelAccept -#TeleparcelAmnesty -#TeleparcelSelling</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </p>
 <p></p>
 
-<p></p>
+<!-- <p></p>
 <h3> Receive parcel(s)</h3>
-<<<<<<< HEAD
 <h3><img src="img/katie.jpg" class="katie">Katie Kuo</h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<h4><img src="img/katie.jpg" class="katie">Katie Kuo</h4>
-=======
-<h3><img src="img/katie.jpg" class="katie">Katie Kuo</h3>
->>>>>>> Stashed changes
-=======
-<h3><img src="img/katie.jpg" class="katie">Katie Kuo</h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
-<button type="button" onclick="alert('Receiving now')">Receive</button>
+<button type="button" onclick="alert('Receiving now')">Receive</button> -->
 
 
 
@@ -126,32 +111,12 @@
          <div class="row galleryBody">
           <h2 style="padding-left:40px;">Postbox</h2>
 
-
-<<<<<<< HEAD
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-		          <h4 style="padding-left:40px;"><form>Search user:
+<!-- 
+              <h3 style="padding-left:40px;"><form>Search user:
   <input type="search" name="search">
 </form>
 <button type="button" onclick="alert('Searching now')">Search</button>
-</h4>
-=======
-=======
->>>>>>> Stashed changes
->>>>>>> origin/master
-		          <h3 style="padding-left:40px;"><form>Search user:
-  <input type="search" name="search">
-</form>
-<button type="button" onclick="alert('Searching now')">Search</button>
-</h3>
-<<<<<<< HEAD
-=======
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
->>>>>>> origin/master
+</h3> -->
 
 
 
@@ -160,45 +125,15 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
               <a href="postbox.html"><div class="listofconversations">
 
-<<<<<<< HEAD
                 <h3>
                 <img src="img/katie.jpg" class="katie" background-color: grey>Katie Kuo</h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-                <h4>
-                <img src="img/katie.jpg" class="katie" background-color: grey>Katie Kuo</h4>
-=======
-                <h3>
-                <img src="img/katie.jpg" class="katie" background-color: grey>Katie Kuo</h3>
->>>>>>> Stashed changes
-=======
-                <h3>
-                <img src="img/katie.jpg" class="katie" background-color: grey>Katie Kuo</h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
-                <h5> Katie has one item pending</h5>
+                <h5> You've received an item from Katie</h5>
 
               </div></a>
 <a href="postbox2.html"><div class="listofconversations">
-<<<<<<< HEAD
               <h3>
-                <img src="img/kaia.jpg" class="katie" background-color: grey>Kaia Kento</h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-              <h4>
-                <img src="img/kaia.jpg" class="katie" background-color: grey>Kaia Kento</h4>
-=======
-              <h3>
-                <img src="img/kaia.jpg" class="katie" background-color: grey>Kaia Kento</h3>
->>>>>>> Stashed changes
-=======
-              <h3>
-                <img src="img/kaia.jpg" class="katie" background-color: grey>Kaia Kento</h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
-                <h5> Kaia: Heya!</h5>
+                <img src="img/mikaela.jpeg" class="katie" background-color: grey>Mikaela Young</h3>
+                <h5> You've sent Mikaela an item</h5>
               </div></a>
 
              <!--  <div class="listofconversations">
@@ -215,50 +150,22 @@
                <!-- convo box  section -->
 <div class="col-sm-6 col-md-6 col-lg-6"> 
 <div class="row containerconvobox">
-<<<<<<< HEAD
-<h3><img src="img/kaia.jpg" class="katie">Kaia Kento</h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<h4><img src="img/kaia.jpg" class="katie">Kaia Kento</h4>
-=======
-<h3><img src="img/kaia.jpg" class="katie">Kaia Kento</h3>
->>>>>>> Stashed changes
-=======
-<h3><img src="img/kaia.jpg" class="katie">Kaia Kento</h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
+<!-- <h3><img src="img/mikaela.jpeg" class="katie">mikaela</h3>
   
 <div class="convoboxcontent2">
-<h5> Kaia: Heya!</h5>
+<h5> mikaela: Heya!</h5>
 
-<<<<<<< HEAD
   <h3><form>Enter message:
   <input type="send" name="send">
 </form></h3>
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-  <h4><form>Enter message:
-  <input type="send" name="send">
-</form></h4>
-=======
-  <h3><form>Enter message:
-  <input type="send" name="send">
-</form></h3>
->>>>>>> Stashed changes
-=======
-  <h3><form>Enter message:
-  <input type="send" name="send">
-</form></h3>
->>>>>>> Stashed changes
->>>>>>> origin/master
 
 </div> <!--convoboxcontent-->
 
-<button type="button" >Send</button>
-
-
+<!-- <button type="button" >Send</button> --> 
+<h3><img src="img/mikaela.jpeg" class="katie">Mikaela Young</h3>
+<a class="twitter-timeline" href="https://twitter.com/search?q=tkuo6%20AND%20mikaela_x" data-widget-id="657412943995211776">Tweets about tkuo6 AND mikaela_x</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+              </div></a>
 
 </div>
 
